# tqc

./: nealang.cabal  runtime.asm
asm/: asmalloc.asm  common.inc  main.asm  math.asm  runtime.asm  runtime.inc
src/: Cli.hs  Common.hs  Main.hs  NEASyn.hs  NclSyn.hs  NclToPhtn.hs  PhtnSyn.hs  QntSyn.hs  QntToNcl.hs  Rename.hs  Tc.hs  Tqc.hs
src/CodeGen/: Asm.hs  AsmText.hs  Gen.hs  codegen.tar.lz
src/NEASyn/: Parse.hs
src/QntSyn/: Infer.hs  Parse.hs  Pretty.hs  Rename.hs  Tc.hs
