cabal-version:       2.0

name:                nealang
version:             0.1.0.0
license:             Unlicense
license-file:        LICENSE
author:              mlugg
maintainer:          mlugg@mlugg.co.uk
build-type:          Simple

executable nealang
  main-is:             Main.hs
  other-modules:       QntSyn, QntSyn.Parse, QntSyn.Infer, PhtnSyn, NclToPhtn, NclSyn
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0, megaparsec, text, parser-combinators, containers, mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -fdefer-typed-holes
