cabal-version:       2.0

name:                nealang
version:             0.1.0.0
license:             Unlicense
license-file:        LICENSE
author:              mlugg
maintainer:          mlugg@mlugg.co.uk
build-type:          Simple

executable nealang
  main-is:             Main.hs
  other-modules:       Common, Tqc, QntSyn, QntSyn.Pretty, Tc, QntSyn.Parse, Rename, PhtnSyn, NclToPhtn, NclSyn, CodeGen.Asm, CodeGen.Gen, CodeGen.AsmText
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0, megaparsec ^>=9.0.1, text ^>=1.2.4.0, parser-combinators ^>=1.2.1, containers ^>=0.6.4.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -fdefer-typed-holes -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
